# S

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  nginx.conf
.github/: CODEOWNERS
.github/workflows/: backend-deploy.yml  backend-tests.yml  codeql.yml  deploy.yml  security-check.yml
AI/: .gitignore  app.env.example  config.py  requirements.txt
AI/Extraction_engine/: README.md  v1.keyword_extractor.py  v2.Semantic_Query_Embeddings.py
AI/Summarizer/: topic_summarizer.py
AI/prompts/: query_extraction_prompt.txt  summarizer_prompt.py
AI/similarity_search_pipeline/: config.py  main.py  pdf_parser.py  pipeline.py
AI/similarity_search_pipeline/core/: embedding.py  pdf_parser.py  pipeline.py  text_splitter.py  vector_db.py
AI/similarity_search_pipeline/data/vector_db.faiss/: index.faiss  index.pkl
Contribution/: Abdulrahman.md  Shehab.md
Docs/ScholarMind Report/: main.tex
Docs/ScholarMind Report/Content/: 1-Preliminary.tex  10-References.tex  11-Appendices.tex  2-Introduction.tex  3-Background.tex  4-System-Analysis.tex  5-System-Design.tex  6-Implementation.tex  7-Evaluation.tex  8-Discussion.tex  9-Conclusion.tex
Docs/ScholarMind Report/Functional/: New_Page_Numbers.tex  Packages.tex  Preamble.tex  Title_Page.tex
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  context.py  database.py  logger.py  middleware.py  network.py  rate_limiter.py  security.py
backend/app/routers/: auth.py  doc.py  user.py
backend/app/routers/v1/: auth.py  doc.py  user.py
backend/app/schemas/: doc_schema.py  request_models.py  response_models.py  user_schema.py
backend/app/services/: docling_pdf.py  docling_service.py  keycloak_service.py  secure_routes.py
backend/app/tests/: test_auth.py
backend/output/tmp1qwc9adf.pdf/: text.md
frontend/: forget-password.html  home.html  index.html  login.html  otp-verification.html  reset-password.html  signup.html
frontend/css/: home.css  login.css  signup.css  styles.css
frontend/js/: app.js  login.js  otp.js  signup.js
