[project]
name = "backend"
version = "1.0.0"
description = "An AI-powered platform to assist students with their academic needs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "firebase-admin>=7.1.0",
    "pydantic[email]>=2.12.0",
    "pyrebase4>=4.8.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]
