[project]
name = "backend"
version = "1.0.0"
description = "An AI-powered platform to assist students with their academic needs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.58.0",
    "fastapi>=0.119.0",
    "firebase-admin>=7.1.0",
    "httpx>=0.28.1",
    "jose>=1.0.0",
    "pydantic[email]>=2.12.0",
    "pyrebase4>=4.8.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.1",
    "slowapi>=0.1.9",
    "uvicorn>=0.37.0",
    "werkzeug>=3.1.4",
]

[dependency-groups]
dev = [
    "black==25.11.0",
    "colorlog==6.10.1",
    "faker==38.2.0",
    "httpx>=0.28.1",
    "mypy-extensions==1.1.0",
    "nodeenv==1.9.1",
    "pathspec==0.12.1",
    "polyfactory==3.1.0",
    "pygments==2.19.2",
    "pyright==1.1.407",
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "respx==0.22.0",
    "ruff==0.14.6",
    "shellingham==1.5.4",
    "typing-inspection==0.4.2",
]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "-q"]
testpaths = [
    "tests",
]

